# agente_tab

./: .gitignore  README.md  plan_atomico.md  pyproject.toml
.github/workflows/: deploy.yml
src/: requirements.txt
src/agente_tab/: crew.py  main.py
src/agente_tab/config/: agents.yaml  tasks.yaml
src/agente_tab/tools/: custom_nl2sql.py
