[project]
name = "agente_tab"
version = "0.1.0"
description = "Agente_TAB using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "mysqlclient>=2.1.0,<3.0.0"
]

[project.scripts]
agente_tab = "agente_tab.main:run"
run_crew = "agente_tab.main:run"
train = "agente_tab.main:train"
replay = "agente_tab.main:replay"
test = "agente_tab.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
